Fix unintended overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,16 +1,16 @@
 .full-width {
     width: 100vw;
     position: relative;
-    margin-left: -50vw;
-    left: 50%
+    margin-left: -51vw;
+    left: 50%;
 }
 
 .galleria {
     width: 100vw;
     background: transparent;
-    margin: auto;
+    margin-bottom: 10px;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,18 +34,48 @@
     padding: 0 1rem;
 }
 
+.galleria__item h1 {
+    padding-bottom: 0 !important;
+}
+
+.galleria__item a {
+    color: #fff !important;
+    font-family: 'CircularStd';
+    font-weight: 600;
+    border-color: #fff;
+}
+
 .galleria__item-inner {
     width: 700px;
     height: 400px;
     align-items: left;
     justify-content: left;
-    padding: 1em;
+    padding: 2em;
     font-family: sans-serif;
-    color: #666;
+    color: #fff;
     background: #00b388;
+    border-radius: 5px;
 }
 
+@media all and (max-width: 850px) {
+    .full-width {
+        margin-left: -53vw;
+    }
+    .galleria__item-inner {
+        width: 400px;
+        height: 400px;
+    }
+}
 
-/* .galleria__inner:first-child {
-    margin-left: 373.5px;
-} */
+@media all and (max-width: 630px) {
+    .full-width {
+        margin-left: -55vw;
+    }
+    .galleria__item {
+        padding: 0 0.3rem;
+    }
+    .galleria__item-inner {
+        width: 300px;
+        height: 500px;
+    }
+}
